7.8.2
 - Fix broken `to_buf()` on `zview`. (#728)
 - Support `PQfsize()` and `PQfmod()`. (#727)
7.8.1
 - Regenerate build files. Should fix ARM Mac build. (#715)
 - Reinstate `<ciso646>` that MSVC can't live with or without. (#713)
7.8.0
 - Streaming large data sets now benchmarks faster than similar C/libpq code!
 - New `array` class for easier parsing of SQL arrays.
 - Deprecating `stream_from`.  Use `transaction_base::stream()`.
 - Use `array_parser` only on comma-separated types, i.e. most of them. (#590)
 - Bumping requirements versions: need postgres 10.
 - Fix `array_parser` bug when parsing semicolon in an unquoted string.
 - Make some `zview` constructors `noexcept` if `string_view` does it.
 - Handle result status code for starting streaming replication.  (#631)
 - Faster text decoding and escaping in data streaming.  (#601)
 - Deprecate `basic_fieldstream` and `fieldstream`.
 - Deprecate `<<` operator inserting a field into an `ostream`.
 - New string conversion fields: `converts_to_string` & `converts_from_string`.
 - Ran `autoupdate` (because the autotools told me to).
 - Documentation tweak. (#584)
 - Typo in README.md. (#586)
 - Support `std::optional<std::string_view>` etc. in `stream_to`. (#596)
 - Remove support for single-quoted array/composite elements.  No such thing!
 - Optimise out a kink in composite field parser.
 - Work around build warning in MinGW: include `winsock2.h` before `windows.h`.
 - Drop some redundant encoding groups.
 - If CMake can't find libpq, fall back to pkg-config. (#664)
 - Work around spurious compile error on g++ pre-gcc-10. (#665)
 - Include `<pqxx/range>` and `<pqxx/time>` headers in `<pqxx/pqxx>`. (#667)
 - Don't use `std::function` as deleter for smart pointers.
 - Work around gcc compile error with regex + address sanitizer + analyzers.
 - Fix "double free" on exit when built as shared library on Debian. (#681)
 - Stop including `<ciso646>`; should be built into compilers. (#680)